<resources>
    <string name="app_name" translatable="false">Islamic</string>
    <string name="taspeh" translatable="false">hallel</string>
    <string name="quran" translatable="false">book</string>
    <string name="kyss" translatable="false">Prophets stories</string>
    <string name="azkaar" translatable="false">attentions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="btn_start" translatable="false">بدء</string>
    <string name="btn_reset" translatable="false">مسح</string>
    <string name="default_val">0</string>
    <string name="prayertimes">اوقات الصلاه</string>
    <string name="directionofkepla">اتجاه القبله</string>
    <string name="communication">communction</string>
    <string name="share">مشاركه</string>
    <string name="setting">الاعدادات</string>
    <string name="text_of_delete">مسح</string>
    <string name="text_of_start">بدء</string>
    <string name="set_location">Cairo</string>
    <string name="fajr">الفجر</string>
    <string name="square">square</string>
    <string name="zero_hour">00:00</string>
    <string name="shuruk">الشروق</string>
    <string name="dhuhr">الظهر</string>
    <string name="asr">العصر</string>
    <string name="maghrib">المغرب</string>
    <string name="isha">العشاء</string>
</resources>