<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="@string/prayertimes"
        android:id="@+id/prayerTimes"
        android:icon="@drawable/timer" />
    <item android:title="@string/directionofkepla"
        android:id="@+id/directionOfPrayer"
        android:icon="@drawable/directions"
        />

    <item android:title="@string/communication">
        <menu>
            <item android:title="@string/share"
                android:icon="@drawable/baseline_share_24"
                android:id="@+id/sharingFrag"
            />

            <item android:title="@string/setting"
                android:icon="@drawable/setting"
                android:id="@+id/settingFrag"/>

        </menu>
    </item>
</menu>