<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F7E7CE"
    tools:context=".Taspeh">


    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/clear_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@drawable/custom_icon_clear"
            android:text="x"
            android:textStyle="bold"
            android:padding="1dp"
            android:textSize="8sp"/>
        <TextView
            android:id="@+id/total_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="0"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:gravity="right"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_margin="10dp"
            android:text="مجموع التسابيح:"
            android:textColor="#ea721d"
            android:textSize="17sp"
            android:gravity="center"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        >


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F7E7CE"
            android:contentDescription="TODO"
            android:src="@drawable/tsp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textView4"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="140dp"
            android:gravity="center">

            <TextView
                android:id="@+id/nomber_of_tsapeh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/default_val"
                android:textColor="@color/black"
                android:textSize="30sp"

                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="3">


        <Button
            android:id="@+id/reset"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:text="@string/btn_reset"
            android:textSize="25sp" />

        <Button
            android:id="@+id/start"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:text="@string/btn_start"
            android:textSize="25sp" />


    </LinearLayout>

</LinearLayout>